--- a/MQTT_BROKER_JL/publisher_file_2/subscriber2.html
+++ b/MQTT_BROKER_JL/publisher_file_2/subscriber2.html
@@ -19,7 +19,7 @@
     logDiv.innerHTML += msg + '<br>';
   }
 
-  const client = mqtt.connect('ws://192.168.137.1:9001');
+  const client = mqtt.connect('ws://localhost:9001');
 
   client.on('connect', function () {
     log('Connecté au broker !');
